--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "apply-tokens": "node scripts/apply-tokens.js",
     "update-imports": "node scripts/update-imports.js",
     "analyze": "node src/cli.js analyze",
+    "analyze:components": "node src/components/analyze-components.js",
     "analyze:tailwind": "node analyzers/tailwind-analyzer.js",
     "analyze:tokens": "node src/cli.js analyze:tokens",
     "api": "node api/server.js",
@@ -42,11 +43,13 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^5.0.1",
+    "@babel/parser": "^7.28.5",
+    "@babel/traverse": "^7.28.5",
+    "chalk": "^5.6.2",
     "commander": "^14.0.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "fs-extra": "^10.0.0",
+    "fs-extra": "^10.1.0",
     "glob": "^8.0.0",
     "inquirer": "^9.0.0",
     "postcss": "^8.4.0",
