feat(migration): add restore command and preserve custom configs
- Add new `restore` CLI command to restore files from backup
- Implement automatic backup creation before migrations
- Preserve custom configurations in globals.css and tailwind.config.ts
- Add debug mode for CSS generation to comment out color variables
- Add new debug-css-test.js script for testing CSS migration

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "migrate:typography": "node src/cli.js typography",
     "migrate:spacing": "node src/cli.js spacing",
     "migrate:components": "node src/cli.js components",
+    "restore": "node src/cli.js restore",
     "apply-tokens": "node scripts/apply-tokens.js",
     "update-imports": "node scripts/update-imports.js",
     "analyze": "node src/cli.js analyze",
