--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "migrate:typography": "node src/cli.js typography",
     "migrate:spacing": "node src/cli.js spacing",
     "migrate:components": "node src/cli.js components",
+    "migrate:components:analyze": "node src/cli.js components:analyze",
     "restore": "node src/cli.js restore",
     "apply-tokens": "node scripts/apply-tokens.js",
     "update-imports": "node scripts/update-imports.js",
